# deploy-one-model-a-week

./: README.md  pyproject.toml  requirements.txt
light_weight_classification/: __init__.py
light_weight_detection/: __init__.py
