[tool.poetry]
name = "deploy-one-model-a-week"
version = "0.1.0"
description = "Challenging myself to deploy one model a week with streamlit and tensorflow"
authors = ["Wirg"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4"
streamlit = "^0.73.1"
pandas = "^1.2.0"
stqdm = "^0.0.3"
tf-explain = "^0.2.1"
opencv-python = "^4.4.0"
lime = "^0.2.0"
scikit-image = "^0.18.1"
matplotlib = "^3.3.3"
PyYAML = "^5.3.1"
scipy = "^1.5.4"
seaborn = ">=0.11"
Cython = {version = "^0.29.21", extras = ["torch-yolov5"]}
torch = ">=1.7"
torchvision = ">=0.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
onnx = "^1.8.0"
protobuf = "^3.14.0"
tf2onnx = "^1.7.2"
onnx-tf = "^1.7.0"

[tool.poetry.extras]
torch-yolov5 = ["Cython"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
